snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210920.105033-2-all.jar.sha1
e01ba4ce9d887d0771b6cf94e76af17c3daa3e06